forms added to dialogs and css updated. issue with whitespace in sidebar projectname found

--- a/src/style.css
+++ b/src/style.css
@@ -101,3 +101,11 @@ footer {
 .todayheader {
     color: black;
 }
+
+#rightSection, #navBar {
+    height: 100%;
+}
+
+#main-form-dialog, #secondary-form-dialog {
+    width: 200px;
+}
